--- a/index.html
+++ b/index.html
@@ -21,7 +21,31 @@
 			<div class="yellow field"></div>
 			
 			<div class="simon-menu">
-				
+
+				<div class="simon-menu-box">
+
+					<h2>Simon</h2>
+
+					<div class="row-items">
+
+						<div class="simon-screen">
+							0
+						</div>
+
+						<div class="btn-box">
+							<button value='start'></button>
+							<p>Start</p>
+						</div>
+
+						<div class="btn-box">
+							<button value='strict'></button>
+							<p>Strict</p>
+						</div>
+
+					</div>
+
+				</div>
+
 			</div>
 
 		</div>
