--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
 
 					</div>
 
+					<div class="row-items">
+						
+						<span>off</span>
+						<span class='switch-btn'>
+							<span class='switch-btn-control'></span>
+						</span>
+						<span>on</span>
+
+					</div>
+
 				</div>
 
 			</div>
