--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 						</div>
 
 					</div>
-
 					<div class="row-items">
-						
+
 						<span>off</span>
 						<span class='switch-btn'>
 							<span class='switch-btn-control'></span>
@@ -53,6 +52,8 @@
 						<span>on</span>
 
 					</div>
+
+					<small>Sound</small>
 
 				</div>
 
