cache DOM in app.js

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		
 		<div class="simon">
 
-			<div class="green field"></div>
-			<div class="red field"></div>
-			<div class="blue field"></div>
-			<div class="yellow field"></div>
+			<div class="green field" data-value=1 ></div>
+			<div class="red field" data-value=2 ></div>
+			<div class="blue field" data-value= ></div>
+			<div class="yellow field" data-value=4 ></div>
 			
 			<div class="simon-menu">
 
@@ -32,12 +32,12 @@
 							0
 						</div>
 
-						<div class="btn-box">
+						<div class="btn-box" id='btn-start'>
 							<button value='start'></button>
 							<p>Start</p>
 						</div>
 
-						<div class="btn-box">
+						<div class="btn-box" id='btn-strict'>
 							<button value='strict'></button>
 							<p>Strict</p>
 						</div>
