add simon functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 			<div class="green field" data-value=1 ></div>
 			<div class="red field" data-value=2 ></div>
-			<div class="blue field" data-value= ></div>
+			<div class="blue field" data-value=3 ></div>
 			<div class="yellow field" data-value=4 ></div>
 			
 			<div class="simon-menu">
@@ -62,6 +62,10 @@
 		</div>
 
 	</div>
+
+	<audio>
+		<source src="" type="audio/mp3">
+	</audio>
 
 	<!-- import jQuery -->
 	<script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
