add simon functionality

--- a/index.html
+++ b/index.html
@@ -63,9 +63,14 @@
 
 	</div>
 
-	<audio>
+	<audio id='simon-audio'>
 		<source src="" type="audio/mp3">
 	</audio>
+
+	<audio id='user-audio'>
+		<source src="" type="audio/mp3">
+	</audio>
+
 
 	<!-- import jQuery -->
 	<script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
