--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 						</div>
 						<div class="row-items">
 
-							<span>off</span>
+							<span class='btn-label'>off</span>
 							<span class='switch-btn'>
 								<span class='switch-btn-control'></span>
 							</span>
-							<span>on</span>
+							<span class='btn-label'>on</span>
 
 						</div>
 
-						<small>Sound</small>
+						<small class='btn-label'>Sound</small>
 
 					</div>
 
